@@ -115,7 +115,7 @@ bool process_JPIPrequest( server_record_t *rec, QR_t *qr)
     if( !close_channel( *(qr->query), rec->sessionlist, &cursession, &curchannel))
       return false;
   
-  if( (qr->query->fx > 0 && qr->query->fy > 0) || qr->query->box_type[0][0] != 0)
+  if( (qr->query->fx > 0 && qr->query->fy > 0) || qr->query->box_type[0][0] != 0 || qr->query->len > 0)
     if( !gene_JPIPstream( *(qr->query), target, cursession, curchannel, &qr->msgqueue))
       return false;
 
@@ -141,25 +141,29 @@ void send_responsedata( server_record_t *rec, QR_t *qr)
   recons_stream_from_msgqueue( qr->msgqueue, fd);
   
   add_EORmsg( fd, qr); /* needed at least for tcp and udp */
-
+  
   len_of_jpipstream = get_filesize( fd);
   jpipstream = fetch_bytes( fd, 0, len_of_jpipstream);
-
+  
   close( fd);
   remove( tmpfname);
 
   fprintf( FCGI_stdout, "\r\n");
 
-  if( qr->channel)
-    if( qr->channel->aux == tcp || qr->channel->aux == udp){
-      send_responsedata_on_aux( qr->channel->aux==tcp, rec->auxtrans, qr->channel->cid, jpipstream, len_of_jpipstream, 1000); /* 1KB per frame*/
-      return;
-    }
-  
-  if( fwrite( jpipstream, len_of_jpipstream, 1, FCGI_stdout) != 1)
-    fprintf( FCGI_stderr, "Error: failed to write jpipstream\n");
+  if( len_of_jpipstream){
+    
+    if( qr->channel)
+      if( qr->channel->aux == tcp || qr->channel->aux == udp){
+	send_responsedata_on_aux( qr->channel->aux==tcp, rec->auxtrans, qr->channel->cid, jpipstream, len_of_jpipstream, 1000); /* 1KB per frame*/
+	return;
+      }
+    
+    if( fwrite( jpipstream, len_of_jpipstream, 1, FCGI_stdout) != 1)
+      fprintf( FCGI_stderr, "Error: failed to write jpipstream\n");
+  }
 
   free( jpipstream);
+
   return;
 }
 
